# vol2com

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  resource.rc
.PVS-Studio/: analyze.pvsconfig
.github/workflows/: BuildAndAnalyze.yml  BuildRelease.yml
cmake/: gitinfo.cmake  pvs-extra-exclude-paths.cmake
src/: CMakeLists.txt  appstyle.cpp  appstyle.h  basslibwrapper.cpp  basslibwrapper.h  boundedvalue.cpp  connectmethodbase.cpp  connectmethodbase.h  controller.cpp  controller.h  equalizer.cpp  equalizer.h  guihelper.cpp  guihelper.h  main.cpp  main.qml  qml.qrc  resource.rc  serial.cpp  serial.h  serialconnector.cpp  serialconnector.h  serialport.cpp  serialport.h  serialworker.h  settings.cpp  settings.h  systemevents.cpp  systemevents.h  translator.cpp  translator.h  utility.h  v2c.h  v2cbase.cpp  v2cbase.h  vol2com.pro  workmodesfactory.cpp  workmodesfactory.h
src/datamodels/: basicqmlmodel.cpp  basicqmlmodel.h  workmodesmodel.cpp
src/gui/: abstractbandviewer.cpp  bandselector.cpp  bandselector.h  equalizerviewer.cpp  equalizerviewer.h
src/i18n/: vol2com2_ru_RU.ts
src/libs/: Place libraries here.txt
src/qml/: EpilepsyWarningPopup.qml  EqualizerView.qml  FadeMode.qml  GeneralMode.qml  GradientSlider.qml  Header.qml  ListDelegate.qml  MainView.qml  RandomMode.qml  SerialDelegate.qml  Settings.qml  StandartButton.qml  TitleBar.qml  TitleBarButton.qml  VerticalToolBar.qml  WorkModeSelector.qml  WorkModeView.qml  main.qml
src/qml/vol2com/: ColorButton.qml  Header.qml  StandartButton.qml  StandartView.qml  TitleBar.qml  TitleBarButton.qml  VerticalToolBar.qml  qmldir
src/qml/vol2com/Popups/: qmldir
src/qml/vol2com/Views/: AboutView.qml  MainView.qml  qmldir
src/qml/vol2com/Views/Connect/: ConnectView.qml  SerialDelegate.qml
src/qml/vol2com/Views/WorkMode/: ChristmasMode.qml  GeneralMode.qml  ManualMode.qml  RandomMode.qml  WorkModeSelector.qml  WorkModeView.qml
src/utils/: boundedvalue.cpp  boundedvalue.h  gitinfo.h
src/viewmodels/: aboutpageviewmodel.cpp  aboutpageviewmodel.h  connectpageviewmodel.h  equalizerviewmodel.h  serialviewmodel.cpp  serialviewmodel.h  toolbarviewmodel.cpp  toolbarviewmodel.h  workmodeviewmodel.cpp  workmodeviewmodel.h
src/workmodes/: christmasmode.cpp  christmasmode.h  fademode.cpp  fademode.h  generalmode.cpp  generalmode.h  manualmode.cpp  manualmode.h  randommode.cpp  randommode.h  submodebase.h  workmodebase.h  workmodewithselector.cpp  workmodewithselector.h
tests/: CMakeLists.txt  signalspy.hpp  ut_boundedvalue.cpp
tools/: extra-exclude-paths.pvsconfig.in  gitinfo.h.in
vol2com/: CMakeLists.txt  basslibwrapper.cpp  connectmethodbase.h  controller.cpp  controller.h  equalizer.h  serialconnector.h  serialworker.cpp  settings.cpp  settings.h  traymenu.cpp  traymenu.h  v2c.h  v2cbase.cpp  v2cbase.h
vol2com/datamodels/: basicqmlmodel.h  workmodesmodel.cpp  workmodesmodel.h
vol2com/gui/: abstractbandviewer.h  bandselector.cpp  bandselector.h  equalizerviewer.h
vol2com/qml/: AboutView.qml  AiMode.qml  ChristmasMode.qml  ColorButton.qml  ConnectView.qml  EpilepsyWarningPopup.qml  EqualizerView.qml  FadeMode.qml  MainView.qml  ManualMode.qml  StandartView.qml
vol2com/utils/: boundedvalue.cpp  boundedvalue.h  gitinfo.h  math.hpp
vol2com/viewmodels/: aboutpageviewmodel.cpp  connectpageviewmodel.cpp  connectpageviewmodel.h  equalizerviewmodel.cpp  equalizerviewmodel.h  serialviewmodel.cpp  serialviewmodel.h  toolbarviewmodel.cpp  workmodeviewmodel.h
vol2com/workmodes/: aimode.cpp  aimode.h  fademode.cpp  fademode.h  generalmode.cpp  genredetector.cpp  genredetector.h  manualmode.cpp  manualmode.h  randommode.cpp  randommode.h  workmodebase.h  workmodewithselector.cpp
